syntax = "proto3";

option go_package="../proto";

service Greeter {
    rpc PutStream(stream StreamReqData) returns (StreamResData); //客户端流模式
}

message StreamReqData {
    string data = 1;
}

message StreamResData {
    string data = 1;
}